level up'd httpSpace. content type now determines mtron typing. added support for as(str::T) from web types. added ,pre documentation. added NOTE concept to llm. exploring a framework in metatron for how users can explore various ways of enriching llms with X --- the ways in which X will become more than what it is. More doc work.